# ruda

./: .gitignore  Cargo.toml  LICENSE  README.md
api/: Cargo.toml
cli/: Cargo.toml
cli/src/: config.rs  deploy.rs  install.rs  login.rs  main.rs  runner.rs  util.rs
dash/: Cargo.toml  ruda.toml  saasbase.toml
dash/assets/css/: tabler-vendors.min.css
dash/assets/js/: popover.js  tooltip.js
dash/src/: config.rs  error.rs  main.rs  mock.rs  realtime.rs  util.rs
dash/src/api/: auth.rs  deploy.rs  mod.rs
dash/src/dash/: account.rs  app.rs  auth.rs  integrations.rs  key.rs  machine.rs  mod.rs  notifications.rs  project.rs  settings.rs  setup.rs  source.rs  storage.rs
dash/src/dash/app/: env.rs
dash/src/dash/partial/: mod.rs  modal.rs
dash/src/data/: app.rs  env.rs  key.rs  machine.rs  mod.rs  project.rs  storage.rs
dash/src/extract/: user.rs
dash/templates/pages/: account.html  integrations.html  login.html  notifications.html  register.html  summary.html
dash/templates/pages/app/: list.html  single.html
dash/templates/pages/key/: list.html  single.html
dash/templates/pages/machine/: list.html  single.html
dash/templates/pages/setup/: setup-1.html  setup.html
dash/templates/pages/source/: list.html  single.html
dash/templates/pages/storage/: list.html  single.html
dash/templates/partials/: charts-summary.html  footer.html  head.html  modals.html  navbar.html  scripts.html  sidebar.html
dash/templates/partials/modals/: modals.html  new-app-modal-source-accounts.html  new-app-modal-source-repos.html
lib/: Cargo.toml
lib/src/: api.rs  config.rs  error.rs  lib.rs
lib/src/runner/: mod.rs  msg.rs
