[package]
name = "ruda-cli"
version = "0.1.0"
edition = "2021"
authors = ["Adam Wierchoła <adam@wierchola.com>"]
repository = "https://github.com/adamsky/ruda"
keywords = ["ruda", "cli", "paas", "cargo"]
license = "MIT"

[[bin]]
name = "ruda"
path = "src/main.rs"

[dependencies]
ruda = { path = "../lib", features = ["runner"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"]}
tokio-util = "0.7.11"
tokio-stream = "0.1"

reqwest = { version = "0.12.4", features = ["json"] }

serde = "1"
serde_derive = "1"
bincode = "1.3.3"

clap = "4"
simplelog = "0.12.2"
directories = "4"
rpassword = "7.3.1"

anyhow = "1.0.86"

uuid = "1.8.0"

service-manager = "0.7.1"
