[package]
name = "dash"
version = "0.1.0"
edition = "2021"

[dependencies]
ruda = { path = "../lib" }
saasbase = "0.1.0"

tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"

axum = { version = "0.7", features = ["macros"]}
axum-extra = { version = "0.9.2", features = ["cookie-private"] }
askama = "0.12.1"

tokio-tungstenite = "0.23.1"

anyhow = "1.0.86"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.8"
config = "0.14.0"
log = "0.4.21"
tracing-subscriber = "0.3.18"
strum = { version = "0.25", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = "0.4.38"

include_dir = "0.7.4"
tower-serve-static = "0.1.1"

octocrab = "0.39.0"
jsonwebtoken = "9.3.0"

names = "0.14.0"
