[package]
name = "dash"
version = "0.1.0"
edition = "2021"
authors = ["Adam Wierchoła <adam@wierchola.com>"]
repository = "https://github.com/adamsky/ruda"
keywords = ["ruda", "dashboard", "paas", "cargo"]
license = "MIT"

[dependencies]
ruda = { path = "../lib", features = ["runner"] }
# saasbase = "0.1.0"
saasbase = { path = "../../../saasba.se/saasbase/lib" }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
tokio-stream = "0.1"
futures-util = "0.3.30"

axum = { version = "0.7", features = ["macros"]}
axum-extra = { version = "0.9.2", features = ["cookie-private"] }
http-body-util = "0.1.2"
url = "2.5.3"
askama = "0.12.1"

tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio-native-tls = "0.3.1"

anyhow = "1.0.86"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.8"
config = "0.14.0"
log = "0.4.21"
tracing-subscriber = "0.3.18"
strum = { version = "0.25", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = "0.4.38"

include_dir = "0.7.4"
tower-serve-static = "0.1.1"

octocrab = "0.39.0"
jsonwebtoken = "9.3.0"

names = "0.14.0"
