[package]
name = "ruda"
version = "0.1.0"
edition = "2021"
authors = ["Adam Wierchoła <adam@wierchola.com>"]
repository = "https://github.com/adamsky/ruda"
keywords = ["ruda", "lib", "paas", "cargo"]
license = "MIT"

[features]
runner = ["tokio", "tokio-util", "tokio-stream", "tokio-tungstenite", "quinn"]

hetzner = ["hrobot"]

[dependencies.tokio]
version = "1" 
features = ["rt-multi-thread", "macros", "signal", "fs", "process"]
optional = true 

[dependencies]
tokio-util = { version = "0.7.11", optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-util = "0.3.31"

tokio-tungstenite = { version = "0.23.1", features = ["native-tls"], optional = true  }
quinn = { version = "0.11.2", optional = true }

thiserror = "2.0.11"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.8"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
pot = "3.0.1"

strum = { version = "0.25", features = ["derive"] }

config = "0.14.0"
log = "0.4.21"

sysinfo = "0.32.0"
    
hrobot = { version = "6.1.0", optional = true }
